Sidebar of the teacher dashboard integrated. Draft side menu eliminated. Size of the profile picture when collapsing fixed. Overlaping when expadint sidebar fixed

--- a/client/src/components/T-Header/THeader.scss
+++ b/client/src/components/T-Header/THeader.scss
@@ -1,7 +1,16 @@
+.t-header-wrapper #header .pro-sidebar {
+  width: 300px;
+  min-width: 300px;
+}
+
+.t-header-wrapper #header .pro-sidebar.collapsed {
+  width: 80px;
+  min-width: 80px;
+}
 #header {
   position: fixed;
   z-index: 2;
-  width: 200px;
+  width: 300px;
 }
 #header .pro-sidebar {
   height: 100vh;
@@ -25,6 +34,17 @@
 #header .pro-sidebar.collapsed {
   width: 80px;
   min-width: 80px;
+}
+
+.profile-img {
+  width: 80px;
+  height: 80px;
+  transition: all 0.3s ease;
+}
+
+.pro-sidebar.collapsed .profile-img {
+  width: 50px;
+  height: 50px;
 }
 #header .pro-sidebar-inner {
   background-color: white;
